Fixing password error in the user's form